Project subject_r_web {
  database_type: 'SQLite'
  Note: '''
    Subject R — 이동형 고령자 친화형 키오스크 (월계종합사회복지관)

    기준: web_api/models.py · web_migrations/versions/d54e8c97a8a4_web_kiosk_baseline.py
    주의: docs/ERD.md 의 v2 초안(23개 테이블)은 아직 코드에 반영되지 않았다. 이것이 현행이다.

    [시각 규칙]
      저장은 전부 UTC ISO 8601 문자열 (2026-09-17T05:00:00Z).
      SQLite 에 TIMESTAMPTZ 가 없어서 문자열을 쓴다. ISO 8601 이라 사전순 정렬이 곧 시간순이다.
      화면 표시와 일자 집계만 KST(Asia/Seoul). 둘을 섞으면 "오늘 일정"이 9시간 밀린다.
      그래서 attendance.day_kst 만 예외적으로 KST 기준이다.

    [ID 규칙]
      정수 자동증가가 아니라 사람이 읽는 문자열이다 (예: demo-phone).
      영문·숫자·하이픈·밑줄 1~64자. 기관과 장소 목록을 JSON 으로 주고받는데,
      자동증가면 가져올 때마다 ID 가 바뀌어 "같은 장소인지"를 판단할 수 없다.
      문자열이라 같은 ID 는 수정, 새 ID 는 추가로 병합된다.

    [삭제 규칙]
      물리 삭제 금지. is_active = false 로 숨긴다.
      과거 trip 과 attendance 가 그 장소·프로그램을 참조하기 때문이다.
      사용 중인 장소를 비활성화하려 하면 서버가 422 로 거부한다.
  '''
}

Table place {
  id varchar(64) [pk, note: '사람이 읽는 문자열 ID']
  name varchar(100) [not null, note: '표시 이름']
  floor integer [not null, note: '층. 음수는 지하 (-10 ~ 100)']
  category varchar(30) [not null, note: '안내 / 강의실 / 편의시설 / 상담']
  description varchar(500) [not null, default: '']
  directions json [not null, note: '길찾기 안내 문장 배열. 최대 12개, 각 200자']
  wheelchair_accessible boolean [not null, default: false]
  is_active boolean [not null, default: true, note: 'false = 이용자 화면에서 숨김. 행은 남는다']
  created_at varchar(40) [not null, note: 'UTC ISO 8601']

  Note: '''
    강의실·편의시설 등 장소.

    directions 는 텍스트 문장 배열이다. 실내 지도와 검증된 경로를
    시뮬레이션팀에서 아직 못 받아서, 자동 경로 계산은 하지 않는다.
  '''
}

Table program {
  id varchar(64) [pk]
  title varchar(100) [not null]
  category varchar(30) [not null, note: '건강 / 문화 / 디지털 / 행사']
  place_id varchar(64) [not null, note: '회차의 기본 장소. 회차가 비워두면 이 값을 쓴다']
  description varchar(1000) [not null, default: '']
  instructor varchar(100) [not null, default: '', note: '강사']
  is_active boolean [not null, default: true]
  created_at varchar(40) [not null]

  Note: '''
    강좌·행사. **시각은 여기 없다** — program_session 에 있다.

    프로그램에 시각이 박혀 있으면 "매주 화요일 건강체조 8주"를 표현할 수 없다.
    프로그램을 8개 만들어야 하고, 그러면 목록에 같은 이름이 여덟 번 뜬다.
  '''
}

Table program_session {
  id varchar(64) [pk]
  program_id varchar(64) [not null]
  place_id varchar(64) [not null, note: '회차마다 강의실이 바뀔 수 있다']
  starts_at varchar(40) [not null, note: 'UTC ISO 8601 (Z)']
  ends_at varchar(40) [not null, note: 'UTC ISO 8601 (Z). starts_at 보다 뒤여야 한다']
  session_day_kst varchar(10) [not null, note: 'starts_at 의 한국 날짜. 오늘 필터용']
  status varchar(20) [not null, default: 'scheduled', note: 'scheduled | canceled']
  cancel_reason varchar(200) [not null, default: '', note: '휴강이면 반드시 채운다']
  created_at varchar(40) [not null]
  updated_at varchar(40) [not null]

  indexes {
    session_day_kst [name: 'ix_program_session_day']
  }

  Note: '''
    강좌의 한 회차. 시각과 장소가 여기 있다.

    반복은 규칙으로 저장하지 않고 회차를 미리 만들어 둔다. 규칙으로 두면 휴강 하나를
    넣으려 해도 예외 테이블이 또 필요하고, 출결이 실제 행을 가리켜야 해서 결국 회차를 만들게 된다.

    [CHECK] ck_program_session_status         status IN (scheduled, canceled)
    [CHECK] ck_program_session_cancel_reason  status = scheduled OR cancel_reason <> ''
    [CHECK] ck_program_session_times          ends_at > starts_at

    휴강은 지우지 않는다. 과거 출결이 회차를 참조하고, 키오스크가 "휴강" 으로 보여줘야 한다.

    session_day_kst 를 따로 두는 이유: 저장은 UTC 인데 "오늘" 은 한국 날짜다.
    컬럼으로 미리 계산해두면 오늘 필터가 문자열 비교 한 번으로 끝난다.
  '''
}

Table robot {
  id varchar(64) [pk]
  name varchar(100) [not null]
  home_place_id varchar(64) [not null, note: '평소 대기 위치. 활동이 끝나면 복귀']
  current_place_id varchar(64) [not null, note: '현재 위치. 도착하면 갱신된다']
  created_at varchar(40) [not null]

  Note: '''
    로봇. 1~2대 규모.

    자율주행이 보조 역할로 내려가면서 좌표·경로 그래프가 웹 범위에서 빠졌다.
    위치는 좌표가 아니라 "어느 place 에 있는가"로만 관리한다.
    실제 로봇에 명령을 보내는 코드는 아직 없다 — 시뮬팀 API 규격 대기 중.
  '''
}

Table trip {
  id varchar(64) [pk, note: 'uuid4']
  robot_id varchar(64) [not null]
  destination_id varchar(64) [not null]
  status varchar(30) [not null, default: 'requested', note: 'requested / moving / arrived / canceled / failed']
  is_simulated boolean [not null, default: true, note: 'true = 데모. 실제 로봇을 움직이지 않았다']
  created_at varchar(40) [not null]
  updated_at varchar(40) [not null]

  Note: '''
    이동 요청 1건.

    [CHECK] ck_trip_status
      status IN (requested, moving, arrived, canceled, failed)

    [부분 유니크 인덱스] uq_trip_robot_active
      robot_id UNIQUE WHERE status IN (requested, moving)
      로봇 하나에 진행 중 이동은 하나뿐. DB 가 강제한다.
      애플리케이션 코드만 믿으면 두 화면에서 동시에 요청했을 때 뚫린다.
      SQLite 에서는 sqlite_where 로 쓴다.
      dbdiagram 은 부분 인덱스를 표현하지 못해 주석으로 둔다.

    상태 전이는 서버가 검사한다. 허용되지 않은 전이는 409.
      requested -> moving | canceled | failed
      moving    -> arrived | canceled | failed
    arrived 가 되면 robot.current_place_id 를 destination_id 로 갱신한다.
  '''
}

Table attendance {
  id varchar(64) [pk, note: 'uuid4']
  program_session_id varchar(64) [not null]
  code_hash varchar(64) [not null, note: 'SHA-256. 회원번호·QR 원문은 DB 에도 로그에도 남기지 않는다']
  day_kst varchar(10) [not null, note: 'YYYY-MM-DD, KST 기준. 이 표에서 유일하게 UTC 가 아니다']
  is_simulated boolean [not null, default: true]
  created_at varchar(40) [not null, note: 'UTC ISO 8601']

  indexes {
    (program_session_id, code_hash) [unique, name: 'uq_attendance_program_session_id']
  }

  Note: '''
    출석 확인 기록.

    원문 대신 SHA-256 해시만 저장한다. 복지관 이용자의 개인정보이기 때문이다.
    해시는 결정적이라 원문 없이도 중복 판정이 된다.
    회차가 이미 날짜를 갖고 있어 day_kst 는 유니크에서 뺐다 — 남겨둔 건 일자별 집계용이다.
    같은 사람이 같은 프로그램에 같은 날 두 번 찍으면 duplicate 응답을 준다.

    바코드 스캐너는 키보드 웨지(HID)라 사람 타자와 구분하는 기준이
    글자 간 시간 간격(50ms)뿐이다. 판별은 web/src/scanner.ts 의 순수 함수가 한다.

    데모 모드에서는 코드 TEST-001 만 통과시킨다.
  '''
}

Ref: program.place_id > place.id
Ref: program_session.program_id > program.id
Ref: program_session.place_id > place.id
Ref: robot.home_place_id > place.id
Ref: robot.current_place_id > place.id
Ref: trip.robot_id > robot.id
Ref: trip.destination_id > place.id
Ref: attendance.program_session_id > program_session.id

TableGroup "마스터 (직원이 관리)" {
  place
  program
  program_session
}

TableGroup "장치" {
  robot
}

TableGroup "기록 (물리 삭제 안 함)" {
  trip
  attendance
}
